--- a/docker/images/rabbitmq/rabbitmq.config
+++ b/docker/images/rabbitmq/rabbitmq.config
@@ -9,10 +9,10 @@
       { verify, verify_peer },
       { fail_if_no_peer_cert, true } ] },
     { auth_mechanisms, ['EXTERNAL'] },
-    { ssl_cert_login_from, common_name }
+    { ssl_cert_login_from, common_name },
     { default_user, <<"qold">> },
     { default_pass, <<"aqora">> },
-    { loopback_users, [ ] },
+    { loopback_users, [ ] }
   ]},
   { rabbitmq_management, [
     { listener, [
@@ -26,6 +26,7 @@
     { allow_anonymous, false },
     { ssl_cert_login, true },
     { ssl_cert_login_from, common_name },
-    { exchange,  <<"ingestion">> }
+    { exchange,  <<"ingestion">> },
+    { vhost, <<"development">> }
   ]}
 ].
