--- a/docker/images/rabbitmq/rabbitmq.config
+++ b/docker/images/rabbitmq/rabbitmq.config
@@ -3,16 +3,17 @@
     { tcp_listeners, [ ] },
     { ssl_listeners, [ 5671 ] },
     { ssl_options, [
-      { certfile, "/ssl/cert.pem" },
-      { keyfile, "/ssl/key.pem" },
-      { cacertfile, "/ssl/cacert.pem" },
+      { certfile, "/ssl/server/cert.pem" },
+      { keyfile, "/ssl/server/key.pem" },
+      { cacertfile, "/ssl/ca/cacert.pem" },
       { verify, verify_peer },
       { fail_if_no_peer_cert, true } ] },
     { auth_mechanisms, ['EXTERNAL'] },
     { ssl_cert_login_from, common_name },
     { default_user, <<"qold">> },
     { default_pass, <<"aqora">> },
-    { loopback_users, [ ] }
+    { loopback_users, [ ] },
+    { cluster_nodes, {[ ], disc }}
   ]},
   { rabbitmq_management, [
     { listener, [
