--- a/docker/new/rabbit/Dockerfile
+++ b/docker/new/rabbit/Dockerfile
@@ -1,9 +1,8 @@
 FROM alpine:3.2
 MAINTAINER Pedro Costa
 
-# RabbitMQ stable version
-ENV RABBIT_VERSION 3.6.0
-
+# RabbitMQ version
+ENV RABBIT_VERSION 3.5.7
 
 # Set Environment variables
 ENV RABBITMQ_HOME=/opt/rabbitmq \
@@ -17,7 +16,6 @@ ENV RABBITMQ_LOGS=- RABBITMQ_SASL_LOGS=-
 # Install Dependencies
 RUN apk add --update curl tar xz bash nano openssl openssl-dev ca-certificates
 RUN echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
-    echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories && \
     echo "http://dl-4.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
 RUN apk add erlang erlang erlang-mnesia erlang-public-key erlang-crypto erlang-ssl \
     erlang-sasl erlang-asn1 erlang-inets erlang-os-mon erlang-xmerl erlang-eldap \
@@ -25,10 +23,9 @@ RUN apk add erlang erlang erlang-mnesia erlang-public-key erlang-crypto erlang-s
 
 # Download and install RabittMQ
 WORKDIR /opt
-RUN curl -Lv -o /opt/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.xz \
-    https://github.com/rabbitmq/rabbitmq-server/releases/download/rabbitmq_v3_6_0/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.xz && \
-    tar -xvf /opt/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.xz && \
-    rm -f /opt/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.xz
+RUN curl -Lv -o /opt/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.gz https://www.rabbitmq.com/releases/rabbitmq-server/v${RABBIT_VERSION}/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.gz
+RUN tar -zxvf /opt/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.gz
+RUN rm -f /opt/rabbitmq-server-generic-unix-${RABBIT_VERSION}.tar.gz
 RUN touch /opt/rabbitmq_server-${RABBIT_VERSION}/etc/rabbitmq/enabled_plugins && \
     /opt/rabbitmq_server-${RABBIT_VERSION}/sbin/rabbitmq-plugins enable --offline rabbitmq_management
 RUN apk del --purge tar xz && rm -Rf /var/cache/apk/*
@@ -44,10 +41,12 @@ Copy erlang.cookie /var/lib/rabbitmq/.erlang.cookie
 RUN chmod 600 /var/lib/rabbitmq/.erlang.cookie
 
 # Set Plugins
-RUN /opt/rabbitmq/sbin/rabbitmq-plugins enable --offline rabbitmq_management
-RUN /opt/rabbitmq/sbin/rabbitmq-plugins enable rabbitmq_mqtt
-RUN /opt/rabbitmq/sbin/rabbitmq-plugins enable rabbitmq_auth_mechanism_ssl
+ADD https://github.com/aweber/rabbitmq-autocluster/releases/download/0.4.1/autocluster-0.4.1.ez /opt/rabbitmq/plugins/
 
+RUN /opt/rabbitmq/sbin/rabbitmq-plugins enable --offline rabbitmq_management && \
+    /opt/rabbitmq/sbin/rabbitmq-plugins enable rabbitmq_mqtt && \
+    /opt/rabbitmq/sbin/rabbitmq-plugins enable rabbitmq_auth_mechanism_ssl && \
+    /opt/rabbitmq/sbin/rabbitmq-plugins enable --offline autocluster
 
 # Define mount points.
 VOLUME ["/data/log", "/data/mnesia"]
