--- a/docker/new/rabbit/rabbitmq.config
+++ b/docker/new/rabbit/rabbitmq.config
@@ -12,8 +12,7 @@
     { ssl_cert_login_from, common_name },
     { default_user, <<"qold">> },
     { default_pass, <<"aqora">> },
-    { loopback_users, [ ] },
-    { cluster_nodes, {[ rabbit@docker_rabbit_1 ], disc }}
+    { loopback_users, [ ] }
   ]},
   { rabbitmq_management, [
     { listener, [
@@ -29,5 +28,12 @@
     { ssl_cert_login_from, common_name },
     { exchange,  <<"ingestion">> },
     { vhost, <<"development">> }
+  ]},
+  {autocluster, [
+    {consul_host, "consul"},
+    {consul_port, 8500},
+    {consul_service, "rabbitmq"},
+    {cluster_name, "dev"},
+    {backend, "consul"}
   ]}
 ].
