--- a/docker/rabbitmq/rabbitmq.config
+++ b/docker/rabbitmq/rabbitmq.config
@@ -12,7 +12,8 @@
     { ssl_cert_login_from, common_name },
     { default_user, <<"qold">> },
     { default_pass, <<"qold">> },
-    { loopback_users, [ ] }
+    { loopback_users, [ ] },
+    { cluster_nodes, {[], disc} }
   ]},
   { rabbitmq_management, [
     { listener, [
@@ -28,12 +29,5 @@
     { ssl_cert_login_from, common_name },
     { exchange,  <<"ingestion">> },
     { vhost, <<"development">> }
-  ]},
-  {autocluster, [
-    {consul_host, "localhost"},
-    {consul_port, 8500},
-    {consul_service, "rabbitmq"},
-    {cluster_name, "dev"},
-    {backend, "consul"}
   ]}
 ].
