--- a/docker/rabbitmq.config
+++ b/docker/rabbitmq.config
@@ -3,9 +3,9 @@
     { tcp_listeners, [ ] },
     { ssl_listeners, [ 5671 ] },
     { ssl_options, [
-      { certfile, "/ssl/server/cert.pem" },
-      { keyfile, "/ssl/server/key.pem" },
-      { cacertfile, "/ssl/ca/cacert.pem" },
+      { certfile, "/ssl/rabbit-cert.pem" },
+      { keyfile, "/ssl/rabbit-key.pem" },
+      { cacertfile, "/ssl/ca-cert.pem" },
       { verify, verify_peer },
       { fail_if_no_peer_cert, true } ] },
     { auth_mechanisms, ['EXTERNAL'] },
