--- a/docker/rabbitmq.config
+++ b/docker/rabbitmq.config
@@ -12,8 +12,7 @@
     { ssl_cert_login_from, common_name },
     { default_user, <<"qold">> },
     { default_pass, <<"qold">> },
-    { loopback_users, [ ] },
-    { cluster_nodes, {[], disc} }
+    { loopback_users, [ ] }
   ]},
   { rabbitmq_management, [
     { listener, [
