--- a/kubernetes/rabbitmq-daemonset.yaml
+++ b/kubernetes/rabbitmq-daemonset.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: rabbitmq
           image: pmdcosta/rabbitmq:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 5671
               name: amqp-ssl
