Kubernetes single-node complete

--- a/config/rabbitmq.config
+++ b/config/rabbitmq.config
@@ -3,9 +3,9 @@
     { tcp_listeners, [ ] },
     { ssl_listeners, [ 5671 ] },
     { ssl_options, [
-      { certfile, "/ssl/rabbit-cert.pem" },
-      { keyfile, "/ssl/rabbit-key.pem" },
-      { cacertfile, "/ssl/ca-cert.pem" },
+      { certfile, "/ssl/server/server.pem" },
+      { keyfile, "/ssl/server/server-key.pem" },
+      { cacertfile, "/ssl/ca/ca.pem" },
       { verify, verify_peer },
       { fail_if_no_peer_cert, true } ] },
     { auth_mechanisms, ['EXTERNAL'] },
@@ -26,7 +26,7 @@
     { allow_anonymous, false },
     { ssl_cert_login, true },
     { ssl_cert_login_from, common_name },
-    { exchange,  <<"ingestion">> },
-    { vhost, <<"development">> }
+    { exchange,  <<"gateway">> },
+    { vhost, <<"dev">> }
   ]}
 ].
