--- a/kubernetes/rabbitmq-daemonset.yaml
+++ b/kubernetes/rabbitmq-daemonset.yaml
@@ -43,5 +43,6 @@ spec:
           secret:
             secretName: rabbitmq-ssl
         - name: ca
+          secret:
             secretName: qold-ca
         
