--- a/kubernetes/rabbitmq-service.yaml
+++ b/kubernetes/rabbitmq-service.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: rabbitmq
 spec:
+  externalIPs: [139.59.166.128,139.59.166.134,139.59.166.152]
   ports:
   - port: 5671
     name: amqp-ssl
@@ -14,4 +15,3 @@ spec:
     name: mqtt-ssl
   selector:
     app: rabbitmq
-
