--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ### Custom
 *.pem
+*-secret.yaml
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
