Renamed ymls and changed sercret references

--- a/kubernetes/rabbitmq-ds.yml
+++ b/kubernetes/rabbitmq-ds.yml
@@ -39,7 +39,7 @@ spec:
           emptyDir: {}
         - name: ssl
           secret:
-            secretName: rabbitmq-server-ssl
+            secretName: rabbitmq-ssl-server
         - name: ca
           secret:
-            secretName: qold-ca
+            secretName: qold-ssl-ca-cer
