Changed VHOST to qold

--- a/config/rabbitmq.config
+++ b/config/rabbitmq.config
@@ -27,6 +27,6 @@
     { ssl_cert_login, true },
     { ssl_cert_login_from, common_name },
     { exchange,  <<"gateway">> },
-    { vhost, <<"development">> }
+    { vhost, <<"qold">> }
   ]}
 ].
